Revert "Width of Dashboard + Main Nav Dropdowns"
This reverts commit 451e0c954f26478f7c12512681b4cb06debfec22.

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -623,6 +623,7 @@ ul.dropdown-menu>li>a.dropdown-toggle  {
 	}
 ul.dropdown-menu>li {
 	line-height: 2.5em;
+	width:389px;
 	}
 	ul.dropdown-menu>li>a:hover  {
 		color: #fff;
