--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -3180,7 +3180,7 @@ span.rightquote:before {
 	content: "\201D"!important;
 	}
 #alertmin { 
-	visibility: hidden!important;
+	visibility: hidden;
 	}
 #dashboardmain #alertmin, #filingbasisabde #alertmin, #filingbasisab #alertmin, #roasign #alertmin { 
 	height: 1px;
