Remove Deleted Row from DT API + Revert Bad Fix for Alerts Load
-- Line 3182 CSS has been reverted (see reverted commit earlier today)
-- Delete Row removes delted row from DataTables API
-- A cancel Icon was added to Delete Row functionality
-- I have to look into the usefulness of the file tab_panels.js, but it isn't needed on the Landing Page (removed) and may be needed on the Application View page (added, needs to be A11Y-tested since HTML has been updated
-- Line 3182 also improves Alert taking up space before it's visible

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -3181,6 +3181,7 @@ span.rightquote:before {
 	}
 #alertmin { 
 	visibility: hidden;
+	padding: 0;
 	}
 #dashboardmain #alertmin, #filingbasisabde #alertmin, #filingbasisab #alertmin, #roasign #alertmin { 
 	height: 1px;
@@ -3207,12 +3208,19 @@ p#mintext {
 #dashboardmain p#mintext { 
 	font-size:1.07em;
 	}
-#alertmin button#alertbtn {
+#alertmin button#alertbtn, #alertmin button#alertbtndash, #alertmin button#cancelbtndash {
 	font-size: 2.5em;
 	color:#444;
 	float:right;
 	display: table-cell;
 	vertical-align:middle;
+	}
+#alertmin button#cancelbtndash {
+	font-size: 2.14em;
+	margin-right:.5em;
+	}
+#alertmin button#alertbtndash {
+	font-size: 2.3em
 	}
 #filingbasisabde #alertmin button#alertbtn, #filingbasisab #alertmin button#alertbtn, #roasign #alertmin button#alertbtn {
 	width:15%;
@@ -3406,6 +3414,9 @@ button[type="submit"].right, button[type="button"].right {
 	color:#333;
 	margin: 0 auto;
 	height:1em;
+	}
+#dashboardmain button.close {
+	height:auto;
 	}
 #dashboardmain button.closegspanels {
     font-size: 3em;
