--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -2116,8 +2116,11 @@ span.ql-picker span:focus, span.ql-picker span.focus, span.ql-picker:focus, span
 	-webkit-box-shadow: inset 0 0 0 rgba(0,0,0,0);
     box-shadow: inset 0 0 0 rgba(0,0,0,0);
 	}
-.close.active.focus, .close.active:focus, .close.focus, .close:active.focus, .close:active:focus, .close:focus {
+.close.active.focus, .close.active:focus, .close:active.focus, .close:active:focus, .close:focus {
 	outline-offset: 4px;
+	}
+#dashsectionscontainer #minholder .close.active.focus, #dashsectionscontainer #minholder .close.active:focus, #dashsectionscontainer #minholder .close.focus, #dashsectionscontainer #minholder .close:active.focus, #dashsectionscontainer #minholder .close:active:focus, #dashsectionscontainer #minholder .close:focus {
+	outline-offset: -4px;
 	}
 #goodservideo .btn-success {
 	margin:0 auto;
@@ -2127,12 +2130,7 @@ span.ql-picker span:focus, span.ql-picker span.focus, span.ql-picker:focus, span
 #goodservideo .btn-block {
 	height:400px;
 	}
-.btn-success.active.focus, .btn-success.active:focus, .btn-success.focus, .btn-success:active.focus, .btn-success:active:focus, .btn-success:focus, .btn-default:focus {
-    /*outline: thin dotted;*/
-	outline: 1px solid #D9D9D6!important;
-	}
-.btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.focus, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:focus {
-    /*outline: thin dotted;*/
+.btn-success.active.focus, .btn-success.active:focus, .btn-success.focus, .btn-success:active.focus, .btn-success:active:focus, .btn-success:focus, .btn-default:focus, .btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.focus, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:focus {
 	outline: 1px solid #D9D9D6!important;
 	}
 div[role="radio"]:focus {
@@ -3189,6 +3187,10 @@ span.rightquote:before {
 #alertmin p { 
 	width: 80%;
 	}
+#dashsectionscontainer #alertmin p { 
+	width: auto;
+	padding-top: .5em;
+	}
 #filingbasisab #alertmin p, #roasign #alertmin p, #filingbasisabde #alertmin p { 
 	width: auto;
 	padding-left:0;
@@ -3215,12 +3217,14 @@ p#mintext {
 	display: table-cell;
 	vertical-align:middle;
 	}
-#alertmin button#cancelbtndash {
-	font-size: 2.14em;
+#alertmin button#cancelbtndash, #alertmin button#alertbtndash {
+	font-size: 1.1em;
 	margin-right:.5em;
-	}
-#alertmin button#alertbtndash {
-	font-size: 2.3em
+	background-color: #A07400;
+    color: #fff;
+    font-weight: 600;
+    width: 80px;
+	margin-top: .5em;
 	}
 #filingbasisabde #alertmin button#alertbtn, #filingbasisab #alertmin button#alertbtn, #roasign #alertmin button#alertbtn {
 	width:15%;
