Update Toggle Columns (Ellipsis Menu)
-- Column order had changed and ellipsis menu function was not updated. Updated.

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -1024,6 +1024,7 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 #dashboardtableone th, #dashboardtabletwo th {
 	white-space: nowrap;
 	overflow: hidden;
+	height:20px;
 	}
 table.dataTable thead .sorting_asc_disabled:after,
 table.dataTable thead .sorting_desc_disabled:after {
