--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -2088,7 +2088,7 @@ div.resetclass{
 #filepetitiontable .deleterow {
     float: none;
 	}
-.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus, div[role="radio"]:focus, .btn-success.active.focus, .btn-success.active:focus, .btn-success.focus, .btn-success:active.focus, .btn-success:active:focus, .btn-success:focus, .btn-sm.active.focus, .btn-sm.active:focus, .btn-sm.focus, .btn-sm:active.focus, .btn-sm:active:focus, .btn-sm:focus, .close.active.focus, .close.active:focus, .close.focus, .close:active.focus, .close:active:focus, .close:focus, .btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.focus, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:focus, .ql-snow.ql-toolbar button:focus, .ql-snow .ql-toolbar button:focus, .ql-snow.ql-toolbar button.focus, .ql-snow.ql-toolbar span:focus, .ql-snow .ql-toolbar span:focus, .ql-snow.ql-toolbar span.focus, .ql-tooltip input:focus, .ql-tooltip input.focus, .ql-container:focus {
+.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus, div[role="radio"]:focus, .btn-success.active.focus, .btn-success.active:focus, .btn-success.focus, .btn-success:active.focus, .btn-success:active:focus, .btn-success:focus, .btn-sm.active.focus, .btn-sm.active:focus, .btn-sm.focus, .btn-sm:active.focus, .btn-sm:active:focus, .btn-sm:focus, .close.active.focus, .close.active:focus, .close.focus, .close:active.focus, .close:active:focus, .close:focus, .btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.focus, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:focus, .ql-snow.ql-toolbar button:focus, .ql-snow .ql-toolbar button:focus, .ql-snow.ql-toolbar button.focus, .ql-snow.ql-toolbar span:focus, .ql-snow .ql-toolbar span:focus, .ql-snow.ql-toolbar span.focus, .ql-tooltip input:focus, .ql-tooltip input.focus, .ql-container:focus, button.ui-datepicker-trigger:focus {
     /*outline: thin dotted;*/
 	outline: 1px solid #9BB8D3!important;
 	outline: 1px solid -webkit-focus-ring-color;
@@ -2098,15 +2098,22 @@ div.resetclass{
   	box-shadow:         rgb(0,0,0);
 	}
 .ql-snow.ql-toolbar span:focus, .ql-snow.ql-toolbar span.focus {
-		outline-offset: 3px;
+	outline-offset: 3px;
+	}
+.ui-datepicker-header select:focus {
+	outline-offset: 2px;
+	outline: 1px solid #fff!important;
+	-webkit-outline-radius: 2px;
+	-moz-outline-radius: 2px;
+	outline-radius: 2px;
 	}
 span.ql-picker span:focus, span.ql-picker span.focus, span.ql-picker:focus, span.ql-picker.focus {
-		outline-offset: 0!important;
-		outline:0!important;
-		background:transparent;
+	outline-offset: 0!important;
+	outline:0!important;
+	background:transparent;
 	}
 .ql-picker {
-		background:transparent;
+	background:transparent;
 	}
 #dashboardtableone_wrapper div.toolbar .btn-xs.active.focus, #dashboardtableone_wrapper div.toolbar .btn-xs.active:focus, #dashboardtableone_wrapper div.toolbar .btn-xs.focus, #dashboardtableone_wrapper div.toolbar  .btn-xs:active.focus, #dashboardtableone_wrapper div.toolbar .btn-xs:active:focus, #dashboardtableone_wrapper div.toolbar .btn-xs:focus, #dashboardtableone_wrapper div.toolbar .btn-xs.active.focus, #dashboardtableone_wrapper div.toolbar .btn-xs.active:focus, #dashboardtableone_wrapper div.toolbar .btn-xs.focus, #dashboardtableone_wrapper div.toolbar .btn-xs:active.focus, #dashboardtableone_wrapper div.toolbar .btn-xs:active:focus, #dashboardtableone th.focus, #dashboardtabletwo_wrapper div.toolbartwo .btn-xs.active.focus, #dashboardtabletwo_wrapper div.toolbartwo .btn-xs.active:focus, #dashboardtabletwo_wrapper div.toolbartwo .btn-xs.focus, #dashboardtabletwo_wrapper div.toolbartwo .btn-xs:active.focus, #dashboardtabletwo_wrapper div.toolbartwo .btn-xs:active:focus, #dashboardtabletwo_wrapper div.toolbartwo .btn-xs:focus, #dashboardtabletwo_wrapper div.toolbartwo .btn-xs.active.focus, #dashboardtabletwo_wrapper div.toolbartwo .btn-xs.active:focus, #dashboardtabletwo_wrapper div.toolbartwo .btn-xs.focus, #dashboardtabletwo_wrapper div.toolbartwo .btn-xs:active.focus, #dashboardtabletwo_wrapper div.toolbartwo .btn-xs:active:focus, #dashboardtabletwo th.focus, #filepetitiontable_wrapper div.toolbarpetitions .btn-xs.active.focus, #filepetitiontable_wrapper div.toolbarpetitions .btn-xs.active:focus, #filepetitiontable_wrapper div.toolbarpetitions .btn-xs.focus, #filepetitiontable_wrapper div.toolbarpetitions .btn-xs:active.focus, #filepetitiontable_wrapper div.toolbarpetitions .btn-xs:active:focus, #filepetitiontable_wrapper div.toolbar .btn-xs:focus, #filepetitiontable_wrapper div.toolbar .btn-xs.active.focus, #filepetitiontable_wrapper div.toolbarpetitions .btn-xs.active:focus, #filepetitiontable_wrapper div.toolbarpetitions .btn-xs.focus, #filepetitiontable_wrapper div.toolbarpetitions .btn-xs:active.focus, #filepetitiontable_wrapper div.toolbarpetitions .btn-xs:active:focus, #filepetitiontable th.focus, #responseamendtable th.focus, #responseamendtabletwo th.focus {
     /*outline: thin dotted;*/
@@ -2673,7 +2680,7 @@ div[role="heading"] button {
 input[type="file"]:focus { 
 	margin-left: 0; 
 	}
-option, select, input[type="text"], input[type="email"], input[type="date"], input[type="tel"], input[type="url"] { 
+option, select, input[type="text"], input[type="email"], input[type="tel"], input[type="url"] { 
 	height: 38px!important; 
 	}
 #goodsandservices_wrapper input[type="search"], #dashboardtableone_wrapper input[type="search"], #dashboardtabletwo_wrapper input[type="search"], #filepetitiontable_wrapper input[type="search"] {
@@ -2858,51 +2865,122 @@ input[type="checkbox"]:focus + label span.radio::before {
 	/*outline: 1px solid #000!important;*/
 	outline-offset: 2px!important;
 	}
-input[type="date"] {
-	padding:0 12px;
-	line-height:38px!important;
-	padding-bottom:2px;
-	padding-right:4px;
+/*jquery ui datepicker*/
+input.datepicker { 
+	position: relative; 
+	padding: 0px 50px; 
+	width: 100%; 
 	}
-/*up down arrows*/
-input[type="date"]::-webkit-inner-spin-button, input[type=month]::-webkit-inner-spin-button {
-	position: absolute;
-	right:6.2em;
-	height:30px;
-	bottom:4px;
-	padding: 0 4px;
-	margin-right:7px;
-    /*-webkit-appearance: none;
-    display: none;*/
-	}
-/*calendar icon popup selector*/
-input[type="date"]::-webkit-calendar-picker-indicator {
-	position: absolute;
-    top: 3.9em;
-	right:0;
-    width: 48px;
-    height: 48px;
-    color: transparent;
-    background: transparent;
-	}
-div.col-md-4 input[type="date"]::-webkit-calendar-picker-indicator {
-    top: 2.2em;
-	}
-div.col-md-6 input[type="date"]::-webkit-calendar-picker-indicator {
-    top: 3.2em;
-	}
-input[type="date"]:after {
+#ui-datepicker-div:focus, .ui-datepicker-calendar:focus {
+	outline: 1px solid #009CDE!important;
+    outline-offset: -2px;
+	border:none!important;
+	} 
+.ui-datepicker-prev:after, .ui-datepicker-next:after {
     font-family: "Glyphicons Halflings";
     font-weight: 900; 
+    color: #fff;
+	font-size:1em;
+	position: absolute; 
+	top: 0;
+	}
+a.ui-datepicker-prev:hover, a.ui-datepicker-next:hover,.ui-datepicker-prev:hover:after, .ui-datepicker-next:hover:after {
+    color: #ddd!important;
+	}
+.ui-datepicker-prev:after, .ui-datepicker-next:after {
+	top: 20px;
+	display:inline-block;
+	}
+.ui-datepicker-next:after {
+	right: 12px;
+	}
+.ui-datepicker-prev:after {
+	left: 12px;
+	}
+.ui-datepicker-header {
+	text-align:center;
+	padding:8px;
+	background-color: #808080;
+    color: #fff;
+	}
+.ui-datepicker-prev:hover:after, .ui-datepicker-next:hover:after {
+	color: #003865;
+	}
+.ui-datepicker-trigger:after {
+	font-family: "Glyphicons Halflings";
     content: "\e109";
     color: #009CDE;
-    padding: 0 8px;
 	font-size:1.5em;
-	margin-left:6px;
-	margin-top:2px;
 	}
-input[type="date"]:hover:after {
+.ui-datepicker-trigger:hover:after {
     color: #047db0;
+	}
+table.ui-datepicker-calendar {
+	min-width: 260px;
+    min-height: 200px;
+	background:#fff;
+	}
+button.ui-datepicker-trigger {
+	height: 48px;
+    width: 48px;
+	background:transparent;
+	border:0;
+	position: absolute;
+    bottom: -6px;
+	}
+button.ui-datepicker-trigger:focus {
+	outline-offset: -8px;
+	}
+.ui-datepicker-prev:after {
+    content: "\e079";
+	}
+.ui-datepicker-next:after {
+    content: "\e080";
+	}
+table.ui-datepicker-calendar td {
+	text-align: center;
+	width: 14.285714285714286%;
+	min-height: 14.285714285714286%;
+	border: 1px solid #ddd;
+	color:#222;
+	background:#9BB8D3;
+	}
+table.ui-datepicker-calendar td:focus {
+	outline:none!important;
+	}
+table.ui-datepicker-calendar td:hover {
+	background-color:#D4EB8E!important;
+	}
+table.ui-datepicker-calendar td a:hover {
+	color:#007A33!important;
+	}
+table.ui-datepicker-calendar td:active {
+	background-color:#007A33!important;
+	}
+table.ui-datepicker-calendar td a:active {
+	color:#D4EB8E!important;
+	}
+table.ui-datepicker-calendar td a {
+	color:#222;
+	}
+table.ui-datepicker-calendar th {
+	text-align: center;
+	padding-top:.3em;
+	padding-bottom:.3em;
+	border: 1px solid #ddd;
+	background-color:#ddd;
+	}
+.ui-datepicker-header select {
+	margin: 3px;
+	border:none;
+	color:#333;
+	background:#EEEEEE;
+	}
+.ui-datepicker-unselectable .ui-state-default {
+    color: #ddd;
+	}
+ table.ui-datepicker-calendar .ui-datepicker-unselectable:hover  {
+    background-color: #9BB8D3!important;
 	}
 #specdescripthree, #specdescript, #specdescriptfour, #specdescriptwo, #specdescriptone, #incontestable textarea {
 	height:115px;
