SOU Blue Bar Width (min. one GS in Blue Bar)
-- fix for issue of blur bar not being full width if there is only one GS in the user's account application

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -1780,6 +1780,7 @@ span#termsagree label a:hover, span#termsagree label a:hover {
     padding-left: 0;
 	min-height: 64px;
     display: inline-block;
+	width:100%;
 	}
 .statementou .noexpand.blue span:first-child {
     margin-right: 1em;
