--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -1115,6 +1115,8 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
 	}
 span#filingsheader, span#due, span#notify {
 	line-height: 39px;
+	color: #555;
+    font-size: 1.2em;
 	}
 #announce {	
 	background-color: #D9D9D6;
