--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -4,8 +4,11 @@
 	margin: 0;
 	font-weight: normal;
     font-style: normal;
-	font-size: 100%;
+	font-size: inherit;
 	text-shadow: 0 0 0 rgba(0,0,0,0)!important;
+	-webkit-box-shadow: 0 0 0 rgba(0,0,0,0)!important;
+	-moz-box-shadow: 	0 0 0 rgba(0,0,0,0)!important;
+	box-shadow: 		0 0 0 rgba(0,0,0,0)!important;
 	}
 html {
 	/*height:auto;*/
@@ -13,6 +16,7 @@ html {
 body {
 	font-family: "Segoe UI", "Helvetica Neue", Tahoma, Arial!important;
 	background-color:#f6f6f6;
+	font-size:1em;
 	/*min-height:100%;*/
 	/*height:100%;*/
 	/*overflow-x: hidden;*/
@@ -300,7 +304,8 @@ object#selected {
 	}
 .label-info {
 	background-color:#dff0d8;
-	color: #555
+	color: #555;
+	vertical-align:text-bottom;
 	}
 div.holdsaforeign p.weight600, div.appendsaforeign p.weight600, div.holdsapending p.weight600, div.appendapending p.weight600 {
 	margin-top:1.2em;
@@ -855,6 +860,7 @@ h1 {
 	}
 h2, h3, h4, h5, h6 {
 	line-height: 1.5em;
+	font-weight: inherit;
 	}
 #petitions h1 {
 	margin-bottom:1em;
@@ -2134,8 +2140,16 @@ span.ql-picker span:focus, span.ql-picker span.focus, span.ql-picker:focus, span
 .close.active.focus, .close.active:focus, .close:active.focus, .close:active:focus, .close:focus {
 	outline-offset: 4px;
 	}
-#dashsectionscontainer #minholder .close.active.focus, #dashsectionscontainer #minholder .close.active:focus, #dashsectionscontainer #minholder .close.focus, #dashsectionscontainer #minholder .close:active.focus, #dashsectionscontainer #minholder .close:active:focus, #dashsectionscontainer #minholder .close:focus {
+#dashsectionscontainer #minholder .close.active.focus, #dashsectionscontainer #minholder .close.focus, #dashsectionscontainer #minholder .close:active:focus, #dashsectionscontainer #minholder .close:focus, #dashsectionscontainer #minholderwelcome .close.active.focus, #dashsectionscontainer #minholderwelcome .close.focus, #dashsectionscontainer #minholderwelcome .close:active:focus, #dashsectionscontainer #minholderwelcome .close:focus {
 	outline-offset: -4px;
+	color:#fff!important;
+	}
+#dashsectionscontainer #minholderwelcome .close.active.focus, #dashsectionscontainer #minholderwelcome .close.focus, #dashsectionscontainer #minholderwelcome .close:active:focus, #dashsectionscontainer #minholderwelcome .close:focus {
+	color:#007A33!important;
+	}
+#dashsectionscontainer #alertminwelcome #minholderwelcome .close.active.focus, #dashsectionscontainer #alertminwelcome #minholderwelcome .close.focus, #dashsectionscontainer #alertminwelcome #minholderwelcome .close:active.focus, #dashsectionscontainer #alertminwelcome #minholderwelcome .close:focus, #dashsectionscontainer #announcements .close.active.focus, #dashsectionscontainer #announcements .close.focus, #dashsectionscontainer #announcements .close:active.focus, #dashsectionscontainer #announcements .close:focus {
+	outline-offset: 4px;
+	outline: 1px solid #fff!important;
 	}
 #goodservideo .btn-success {
 	margin:0 auto;
@@ -2262,6 +2276,12 @@ button#moreoptionsbtn {
 	}
 #alertmin button#alertbtndash:active:focus, #alertmin button#alertbtndash:active:hover, #alertmin button#cancelbtndash:active:focus, #alertmin button#cancelbtndash:active:hover, #alertmin button#alertbtndash:active, #alertmin button#alertbtndash:focus, #alertmin button#cancelbtndash:active, #alertmin button#cancelbtndash:focus, #alertmin button#cancelbtndash:hover, #alertmin button#alertbtndash:hover {
 	background-color: #825e00;
+	color:#fff;
+	}
+#alertminwelcome a#surveybtndash:active:focus, #alertminwelcome a#surveybtndash:active:hover, #alertminwelcome a#surveybtndash:active, #alertminwelcome a#surveybtndash:focus, #alertminwelcome a#surveybtndash:hover {
+	background-color: #eee;
+	outline: 1px solid #007A33!important;
+	text-decoration:none;
 	}
 .btn.add, .btn-success.add  {	
 	margin-top: 1.91em;
@@ -2385,6 +2405,7 @@ div[role="switch"] {
 #on, #off {
 	color:#fff;
 	font-size: 13px;
+	line-height:38px;
 	}
 #on {
 	margin-left: 18px;
@@ -2418,7 +2439,6 @@ div[role="switch"] {
 	background-color: #aaa;
 	-webkit-transition: .4s;
 	transition: .4s;
-	padding-top: 7px;
 	border-radius: 19px;
 	}
 .slider:before {
@@ -3271,6 +3291,19 @@ span.rightquote:before {
 	visibility: hidden;
 	padding: 0;
 	}
+#alertminwelcome { 
+	top: 0.25em;
+	float: none;
+	margin-bottom: 1.2em!important;
+	height: auto;
+	background-color:#007A33;
+	color:#fff;
+	}
+#alertminwelcome button.closegspanels { 
+	font-size: 2.2em!important;
+	display: table;
+	vertical-align:middle;
+	}
 #dashboardmain #alertmin, #filingbasisabde #alertmin, #filingbasisab #alertmin, #roasign #alertmin { 
 	height: 1px;
 	}
@@ -3279,7 +3312,8 @@ span.rightquote:before {
 	}
 #dashsectionscontainer #alertmin p { 
 	width: auto;
-	padding-top: .5em;
+	padding-top: .45em;
+	float:none;
 	}
 #filingbasisab #alertmin p, #roasign #alertmin p, #filingbasisabde #alertmin p { 
 	width: auto;
@@ -3292,15 +3326,45 @@ div#minholder {
 	width: 100%;
 	min-height: 2.91em;
 	}
-p#mintext { 
+div#minholderwelcome { 
+	display: table;
+	width: 100%;
+	min-height: 2.91em;
+	}
+div#minholderwelcome div { 
+	width: 80%;
+	float: left;
+	display:table;
+	}
+#alertminwelcome div#minholderwelcome { 
+	min-height: auto;
+	}
+p#mintext, p#mintextdraft { 
 	display: table-cell;
 	vertical-align:middle;
 	padding-left:27px;
 	}
-#dashboardmain p#mintext { 
+p#mintext {
+	width:80%;
+	}
+#minholderwelcome p#mintext {
+	width:auto;
+	padding-right:1em;
+	float:left;
+	position:relative;
+	display: table-cell;
+	margin-bottom: 0;
+	vertical-align: middle;
+	padding-top: .45em;
+	margin-bottom: .5em;
+	}
+#dashboardmain p#mintext, #dashboardmain p#mintextdraft { 
 	font-size:1.07em;
 	}
-#alertmin button#alertbtn, #alertmin button#alertbtndash, #alertmin button#cancelbtndash {
+#announcements h4 { 
+	font-size:1.4em;
+	}
+#alertmin button#alertbtn, #alertmin button#alertbtndash, #alertmin button#cancelbtndash, #alertminwelcome a#surveybtndash {
 	font-size: 2.5em;
 	color:#444;
 	float:right;
@@ -3309,12 +3373,30 @@ p#mintext {
 	}
 #alertmin button#cancelbtndash, #alertmin button#alertbtndash {
 	font-size: 1.1em;
-	margin-right:.5em;
 	background-color: #A07400;
     color: #fff;
     font-weight: 600;
     width: 80px;
 	margin-top: .5em;
+	}
+#alertmin button#cancelbtndash {
+	margin-right:0;
+	margin-left: .5em;
+	}
+#alertminwelcome a#surveybtndash {
+	font-size: 1.1em!important;
+	background-color: #fff;
+    color: #007A33;
+    font-weight: 600;
+	padding-left:.5em;
+	padding-right:.5em;
+	float: left;
+	line-height: 28px;
+	position:relative;
+	margin-left: 27px;
+	}
+#alertminwelcome a#surveybtndash .glyphicon-new-window, #alertminwelcome a#surveybtndash .glyphicon-new-window:hover {
+    color: #007A33!important;
 	}
 #filingbasisabde #alertmin button#alertbtn, #filingbasisab #alertmin button#alertbtn, #roasign #alertmin button#alertbtn {
 	width:15%;
@@ -3476,7 +3558,7 @@ button[type="submit"].right, button[type="button"].right {
 	max-width: 100%;
 	}
 /* START GSselected, Dashboard, Editowner, Reviewattorney panels */
-#gsselected .panel-heading h4, #gsselected .panel-heading p, #dashboardmain .panel-heading h4, #dashboardmain .panel-heading p, #editowner .panel-heading h4, #editowner .panel-heading p, #reviewattorney .panel-heading h4, #reviewattorney .panel-heading p, #userprofilepage .panel-heading p, #userprofilepage .panel-body p {
+#gsselected .panel-heading h4, #gsselected .panel-heading p, #dashboardmain .panel-heading p, #editowner .panel-heading h4, #editowner .panel-heading p, #reviewattorney .panel-heading h4, #reviewattorney .panel-heading p, #userprofilepage .panel-heading p, #userprofilepage .panel-body p {
 	display:inline-block;
 	font-size: 1.3em;
 	}
@@ -3512,9 +3594,19 @@ button[type="submit"].right, button[type="button"].right {
 	}
 #dashboardmain button.close {
 	height:auto;
+	float:right;
+	}
+#dashboardmain button.close span.glyphicon-remove {
+	display: table-cell;
+    vertical-align: middle;
+	top:1px;
+	}
+#dashboardmain #alertminwelcome button.close span.glyphicon-remove {
+	color:#fff;
 	}
 #dashboardmain button.closegspanels {
     font-size: 3em;
+	display:table;
 	}
 #dashboard .dashsection button.close, #filepetitiontable button.deleterow {
    	color: #009CDE;
@@ -3590,6 +3682,9 @@ button[type="submit"].right, button[type="button"].right {
 	border-bottom: 2px solid #004C97;
     background-color: #D9D9D6;
 	padding: 14px 15px;
+	}
+#dashboardmain .panel-heading {
+	padding: 15px!important;
 	}
 #petitions2 .panel-body, #responseamend .panel-body {
 	-webkit-border-top-left-radius: 		0;
@@ -4183,6 +4278,9 @@ footer #megamenu ul {
 		}
 	#responseamend .upload p {
 		margin-top: .6em;
+		}
+	#alertminwelcome {
+		width:48.9%
 		}
 	}
 @media (min-width: 1200px) and (max-width: 1587px) {
