--- a/css/reset.css
+++ b/css/reset.css
@@ -15,7 +15,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+	/*font-family: inherit;*/
 	}
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
