Assessment Issue 18.3 Fix
-- Local implementation of Maven implementation, already merged into the application

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -4054,6 +4054,9 @@ footer #megamenu ul {
 	div.alertmargin #alertmin {
 		margin-bottom:5em!important;
 		}
+	div#yesmeaning .control-label p {
+		margin-top:.7em;
+		}
 }
 @media (max-width: 767px) {
 	body {
