Date Format Changes +1
-- Fix for positioning of Modal Header 'Close' Button
-- Placeholder changes for Datepickers
-- Screen Reader changes for Datepickers
-- Removal of HTML5 Date Pattern Validator
-- Foreign Application Filing Date Alert functioning with new Date Formats

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -2505,6 +2505,7 @@ input:checked + .slider #off {
 .modal-header h4 {
     width: 80%;
 	padding: .35em .3em .2em .3em;
+	float:left;
 	}
 .modal-content {
 	-webkit-border-top-left-radius: 		0;
